--- a/submission/references.bib
+++ b/submission/references.bib
@@ -1,15 +1,80 @@
-@book{haber2011,
-  title = {Digital past: Geschichtswissenschaft im digitalen Zeitalter},
-  shorttitle = {Digital past},
-  author = {Haber, Peter},
-  date = {2011},
-  publisher = {Oldenbourg Verlag},
-  location = {München},
-  doi = {10.1515/9783486712339},
-  isbn = {978-3-486-70704-5},
-  langid = {german},
-  pagetotal = {184},
-  keywords = {Data processing,Electronic information resources,Historiography,Internet,Methodology},
-  annotation = {OCLC: ocn767717529},
-  file = {/Users/username/Zotero/storage/L2Z5AGBR/10.1515_9783486712339.pdf}
+@misc{anr2023,
+    title = {La science ouverte},
+    url = {https://anr.fr/fr/lanr/engagements/la-science-ouverte/},
+    author = {Agence nationale de la recherche},
+    year = {2023},
+    note = {Accessed on July 19, 2024}
+}
+@article{beretta2023,
+  title={Données ouvertes liées et recherche historique : un changement de paradigme},
+  author={Francesco Beretta},
+  journal={Humanités numériques},
+  volume={7},
+  year={2023},
+  doi = {10.4000/revuehn.3349}
+}
+@article{beretta2024a,
+  title={Données liées ouvertes et référentiels publics : un changement de paradigme pour la recherche en sciences humaines et sociales},
+  author={Francesco Beretta},
+  journal={Arabesques},
+  volume={112},
+  year={2024},
+  pages={26--27}
+}
+@incollection{beretta2024b,
+  title       = {Semantic Data for Humanities and Social Sciences (SDHSS): an Ecosystem of CIDOC CRM Extensions for Research Data Production and Reuse},
+  author      = {Francesco Beretta},
+  editor      = "Thomas Riechert AND Hartmurt Beyer AND Jennifer Blanke AND Edgard Marx",
+  booktitle   = "Professorale Karrieremuster. Entwicklung einer wissenschaftlichen Methode zur Forschung auf online verfügbaren und verteilten Forschungsdatenbanken der Universitätsgeschichte",
+  publisher   = "International Handbooks on Information Systems",
+  address     = "Leipzig",
+  year        = 2024,
+  pages       = "73--101",
+}
+@article{borgo2022,
+  title={DOLCE: A descriptive ontology for linguistic and cognitive engineering},
+  author={Stefano Borgo AND Roberta Ferrario AND Aldo Gangemi AND Nicola Guarino AND Claudio Masolo AND Daniele Porello AND Emilio M. Sanfilippo AND Laure Vieu},
+  journal={Applied Ontology},
+  volume={17},
+  year={2022},
+  pages={45--69},
+}
+@misc{ec2023,
+    title = {Open Data, Software and Code Guidelines},
+    url = {https://open-research-europe.ec.europa.eu/for-authors/data-guidelines#standardsandfair},
+    author = {European Commission},
+    year = {2023},
+    note = {Accessed on July 19, 2024}
+}
+@article{feugere2015,
+  title={Les bases de données en archéologie. De la révolution informatique au changement de paradigme},
+  author={Michel Feugère},
+  journal={Cahiers philosophiques},
+  volume={141},
+  year={2015},
+  pages={139--147},
+}
+@incollection{guarino2004,
+  title       = {An Overview of OntoClean},
+  author      = {Nicola Guarino AND Chistopher A. Welty},
+  editor      = "Steffen Staab AND Rudi Studer",
+  booktitle   = "Handbook on Ontologies",
+  publisher   = "International Handbooks on Information Systems",
+  address     = "Berlin AND Heidelberg",
+  year        = 2004,
+  pages       = "151--171",
+}
+@misc{snsf2024,
+    title = {Open Research Data},
+    url = {https://www.snf.ch/en/dMILj9t4LNk8NwyR/topic/open-research-data},
+    author = {Swiss National Science Foundation},
+    year = {2024},
+    note = {Accessed on July 19, 2024}
+}
+@misc{unesco2023,
+    title = {UNESCO Recommendation on Open Science},
+    url = {https://www.unesco.org/en/open-science/about?hub=686},
+    author = {UNESCO},
+    year = {2023},
+    note = {Accessed on July 19, 2024}
 }
