--- a/submission/references.bib
+++ b/submission/references.bib
@@ -24,7 +24,7 @@
 @incollection{beretta2024b,
   title       = {Semantic Data for Humanities and Social Sciences (SDHSS): an Ecosystem of CIDOC CRM Extensions for Research Data Production and Reuse},
   author      = {Francesco Beretta},
-  editor      = "Thomas Riechert AND Hartmurt Beyer AND Jennifer Blanke AND Edgard Marx",
+  editor      = "Thomas Riechert and Hartmurt Beyer and Jennifer Blanke and Edgard Marx",
   booktitle   = "Professorale Karrieremuster. Entwicklung einer wissenschaftlichen Methode zur Forschung auf online verfügbaren und verteilten Forschungsdatenbanken der Universitätsgeschichte",
   publisher   = "International Handbooks on Information Systems",
   address     = "Leipzig",
@@ -56,7 +56,7 @@
 }
 @incollection{guarino2004,
   title       = {An Overview of OntoClean},
-  author      = {Nicola Guarino AND Chistopher A. Welty},
+  author      = {Nicola Guarino}, {Chistopher A. Welty},
   editor      = "Steffen Staab AND Rudi Studer",
   booktitle   = "Handbook on Ontologies",
   publisher   = "International Handbooks on Information Systems",
