--- a/submission/references.bib
+++ b/submission/references.bib
@@ -42,7 +42,7 @@
 @misc{ec2023,
     title = {Open Data, Software and Code Guidelines},
     url = {https://open-research-europe.ec.europa.eu/for-authors/data-guidelines#standardsandfair},
-    author = {European Commission},
+    author = {"European Commission"},
     year = {2023},
     note = {Accessed on July 19, 2024}
 }
@@ -56,18 +56,18 @@
 }
 @incollection{guarino2004,
   title       = {An Overview of OntoClean},
-  author      = {Nicola Guarino}, {Chistopher A. Welty},
-  editor      = "Steffen Staab AND Rudi Studer",
-  booktitle   = "Handbook on Ontologies",
-  publisher   = "International Handbooks on Information Systems",
-  address     = "Berlin AND Heidelberg",
-  year        = 2004,
-  pages       = "151--171",
+  author      = {Nicola Guarino AND Chistopher A. Welty},
+  editor      = {Steffen Staab AND Rudi Studer},
+  booktitle   = {Handbook on Ontologies},
+  publisher   = {International Handbooks on Information Systems},
+  address     = {Berlin AND Heidelberg},
+  year        = {2004,
+  pages       = {151--171",
 }
 @misc{snsf2024,
     title = {Open Research Data},
     url = {https://www.snf.ch/en/dMILj9t4LNk8NwyR/topic/open-research-data},
-    author = {Swiss National Science Foundation},
+    author = {"Swiss National Science Foundation"},
     year = {2024},
     note = {Accessed on July 19, 2024}
 }
