--- a/submission/references.bib
+++ b/submission/references.bib
@@ -61,8 +61,8 @@
   booktitle   = {Handbook on Ontologies},
   publisher   = {International Handbooks on Information Systems},
   address     = {Berlin AND Heidelberg},
-  year        = {2004,
-  pages       = {151--171",
+  year        = {2004},
+  pages       = {151--171},
 }
 @misc{snsf2024,
     title = {Open Research Data},
