--- a/submission/references.bib
+++ b/submission/references.bib
@@ -1,7 +1,7 @@
 @misc{anr2023,
     title = {La science ouverte},
     url = {https://anr.fr/fr/lanr/engagements/la-science-ouverte/},
-    author = {Agence nationale de la recherche},
+    author = {ANR},
     year = {2023},
     note = {Accessed on July 19, 2024}
 }
@@ -33,7 +33,7 @@
 }
 @article{borgo2022,
   title={DOLCE: A descriptive ontology for linguistic and cognitive engineering},
-  author={Stefano Borgo AND Roberta Ferrario AND Aldo Gangemi AND Nicola Guarino AND Claudio Masolo AND Daniele Porello AND Emilio M. Sanfilippo AND Laure Vieu},
+  author={Stefano Borgo and Roberta Ferrario and Aldo Gangemi and Nicola Guarino and Claudio Masolo and Daniele Porello and Emilio M. Sanfilippo and Laure Vieu},
   journal={Applied Ontology},
   volume={17},
   year={2022},
@@ -42,7 +42,7 @@
 @misc{ec2023,
     title = {Open Data, Software and Code Guidelines},
     url = {https://open-research-europe.ec.europa.eu/for-authors/data-guidelines#standardsandfair},
-    author = {European Commission},
+    author = {EC},
     year = {2023},
     note = {Accessed on July 19, 2024}
 }
@@ -56,8 +56,8 @@
 }
 @incollection{guarino2004,
   title       = {An Overview of OntoClean},
-  author      = {Nicola Guarino AND Chistopher A. Welty},
-  editor      = {Steffen Staab AND Rudi Studer},
+  author      = {Nicola Guarino and Chistopher A. Welty},
+  editor      = {Steffen Staab and Rudi Studer},
   booktitle   = {Handbook on Ontologies},
   publisher   = {International Handbooks on Information Systems},
   address     = {Berlin AND Heidelberg},
@@ -67,7 +67,7 @@
 @misc{snsf2024,
     title = {Open Research Data},
     url = {https://www.snf.ch/en/dMILj9t4LNk8NwyR/topic/open-research-data},
-    author = {Swiss National Science Foundation},
+    author = {SNSF},
     year = {2024},
     note = {Accessed on July 19, 2024}
 }
